--- a/crtfix/crtfix.vcxproj.filters
+++ b/crtfix/crtfix.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="thrfix.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="xlocal.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\README.md">
